plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.ubb'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-web'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // --- Lombok ---
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // --- Data Access / Persistence ---
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // --- Mail ---
    implementation("org.springframework.boot:spring-boot-starter-mail:1.2.0.RELEASE")
    implementation 'org.eclipse.angus:angus-mail:2.0.2'

    // --- Security & Authentication ---
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // --- Validation ---
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // --- Env ---
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // --- API documentation ---
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // --- modelmapper ---
    implementation("org.modelmapper:modelmapper:3.2.4")

}

tasks.named('test') {
    useJUnitPlatform()
}
